@@ -81,6 +81,7 @@ following names for their contribution to the product.
 * Michael Walsh
 * Mike Horvath
 * Mormegil
+* MrPete
 * Nakon
 * Nathan Larson
 * nephele
